--- a/pages/home-video/index.wxml
+++ b/pages/home-video/index.wxml
@@ -1,6 +1,19 @@
 <!--pages/home-video/index.wxml-->
 <view class="video">
-<block wx:for="{{topMvs}}" wx:key="id">
-  <view>{{item.name}}</view>
-</block>
+<!-- * 自动取item.id -->
+<view class="video-item" wx:for="{{topMvs}}" wx:key="id">
+  <view class="item">
+    <view class="album">
+    <!-- * mode 为了比例匹配 -->
+      <image class="image" src="{{item.cover}}" mode="widthFix"></image>
+      <view class="info">
+        <view class="count">{{item.playCount}}</view>
+        <view class="duration">{{item.mv.videos[0].duration}}</view>
+      </view>
+    </view>
+    <view class="content">
+        {{item.name}} - {{item.artistName}}
+      </view>
+  </view>
+</view>
 </view>
