--- a/pages/home-video/index.wxml
+++ b/pages/home-video/index.wxml
@@ -1,4 +1,6 @@
 <!--pages/home-video/index.wxml-->
+<wxs src="../../utils/format.wxs" module="format"></wxs>
+
 <view class="video">
 <!-- * 自动取item.id -->
 <view class="video-item" wx:for="{{topMvs}}" wx:key="id">
@@ -7,8 +9,8 @@
     <!-- * mode 为了比例匹配 -->
       <image class="image" src="{{item.cover}}" mode="widthFix"></image>
       <view class="info">
-        <view class="count">{{item.playCount}}</view>
-        <view class="duration">{{item.mv.videos[0].duration}}</view>
+        <view class="count">{{format.formatCount(item.playCount)}}</view>
+        <view class="duration">{{format.formatDuration(item.mv.videos[0].duration)}}</view>
       </view>
     </view>
     <view class="content">
