--- a/pages/home-video/index.wxml
+++ b/pages/home-video/index.wxml
@@ -1,21 +1,9 @@
 <!--pages/home-video/index.wxml-->
-<wxs src="../../utils/format.wxs" module="format"></wxs>
+
 
 <view class="video">
 <!-- * 自动取item.id -->
 <view class="video-item" wx:for="{{topMvs}}" wx:key="id">
-  <view class="item">
-    <view class="album">
-    <!-- * mode 为了比例匹配 -->
-      <image class="image" src="{{item.cover}}" mode="widthFix"></image>
-      <view class="info">
-        <view class="count">{{format.formatCount(item.playCount)}}</view>
-        <view class="duration">{{format.formatDuration(item.mv.videos[0].duration)}}</view>
-      </view>
-    </view>
-    <view class="content">
-        {{item.name}} - {{item.artistName}}
-      </view>
-  </view>
+  <video-item-v1 item="{{item}}"></video-item-v1>
 </view>
 </view>
