--- a/components/area-header/index.wxss
+++ b/components/area-header/index.wxss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 10rpx;
+  align-items: center;
 }
 
 /* * empty 当这个元素内容为空时的class slot插槽没东西插入就是空+ 兄弟选择器*/
