feat: suggest search data fetch and basic layout

--- a/pages/detail-search/index.wxml
+++ b/pages/detail-search/index.wxml
@@ -1,17 +1,33 @@
 <!--pages/detail-search/index.wxml-->
 <!-- Search -->
 <van-search 
+  value="{{searchValue}}"
   shape="round" 
   placeholder="请输入喜欢的歌曲"  
   background="#fafafa"
+  bind:change="handleSearchChange"
 />
 
 <!-- hot search -->
-<view class="keywords">
+<!--wx:if 优化 -->
+<view class="keywords" hidden="{{searchValue.length && suggestSongs.length}}">
   <view class="title">热门搜索</view>
   <view class="list">
     <block wx:for="{{hotKeywords}}" wx:key="first">
       <text class="tag" bindtap="handleTagClick" data-value="{{item.first}}">{{item.first}}</text>
     </block>
   </view>
+</view>
+
+<!-- suggest search -->
+<view class="suggest" hidden="{{!searchValue.length && !suggestSongs.length}}">
+    <view class="title">搜索“{{searchValue}}”</view>
+    <view class="list">
+      <block wx:for="{{suggestSongs}}" wx:key="keyword">
+        <view class="list-item">
+          <image class="icon" mode="widthFix" src="/assets/images/icons/search_icon.png"></image>
+          <text class="text">{{item.keyword}}</text>
+        </view>
+      </block>
+    </view>
 </view>
