--- a/pages/detail-search/index.wxml
+++ b/pages/detail-search/index.wxml
@@ -10,7 +10,7 @@
 
 <!-- hot search -->
 <!--wx:if 优化 -->
-<view class="keywords" hidden="{{searchValue.length && suggestSongs.length}}">
+<view class="keywords" hidden="{{suggestSongs.length}}">
   <view class="title">热门搜索</view>
   <view class="list">
     <block wx:for="{{hotKeywords}}" wx:key="first">
@@ -20,7 +20,7 @@
 </view>
 
 <!-- suggest search -->
-<view class="suggest" hidden="{{!searchValue.length && !suggestSongs.length}}">
+<view class="suggest" hidden="{{!suggestSongs.length}}">
     <view class="title">搜索“{{searchValue}}”</view>
     <view class="list">
       <block wx:for="{{suggestSongs}}" wx:key="keyword">
