--- a/pages/detail-search/index.wxml
+++ b/pages/detail-search/index.wxml
@@ -26,7 +26,8 @@
       <block wx:for="{{suggestSongs}}" wx:key="keyword">
         <view class="list-item">
           <image class="icon" mode="widthFix" src="/assets/images/icons/search_icon.png"></image>
-          <text class="text">{{item.keyword}}</text>
+          <!-- <text class="text">{{item.keyword}}</text> -->
+          <rich-text nodes="{{suggestSongsNodes[index]}}"></rich-text>
         </view>
       </block>
     </view>
