--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -1,2 +1,4 @@
 <!--pages/music-player/index.wxml-->
-<text>pages/music-player/index.wxml</text>
+<!-- bg -->
+<image class="bg-image" mode="aspectFill" src="{{currentSong.al.picUrl}}"></image>
+<view class="bg-cover"></view>
