--- a/pages/music-player/index.wxss
+++ b/pages/music-player/index.wxss
@@ -1,1 +1,15 @@
 /* pages/music-player/index.wxss */
+.bg-image, .bg-cover{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* * 只有 position的元素才能设置z-index */
+  z-index: -1;
+}
+
+.bg-cover {
+  background-color: rgba(0,0,0,.5);
+  backdrop-filter: blur(60px);
+}
