feat: swiper for two page,dynamic gets the content height, events for swiper

--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -6,7 +6,14 @@
 <!-- custom nav bar -->
 <nav-bar>
   <view class="tab" slot="title">
-    <view>歌曲</view>
-    <view>歌词</view>
+    <view class="{{!currentPage? 'active':''}}">歌曲</view>
+    <view class="divider">|</view>
+    <view class="{{currentPage? 'active':''}}">歌词</view>
   </view>
 </nav-bar>
+
+<!-- content -->
+<swiper class="content" style="height:{{contentHeight}}px" bindchange="handleSwiperChange">  
+  <swiper-item>1</swiper-item>
+  <swiper-item>2</swiper-item>
+</swiper>
