--- a/pages/music-player/index.wxss
+++ b/pages/music-player/index.wxss
@@ -13,3 +13,18 @@
   background-color: rgba(0,0,0,.5);
   backdrop-filter: blur(60px);
 }
+
+/* 导航 */
+.tab {
+  display: flex;
+  font-size: 28rpx;
+  color: #999
+}
+
+.tab .divider {
+  margin: 0 10rpx;
+}
+
+.tab .active {
+  color: #fff
+}
