--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -14,6 +14,32 @@
 
 <!-- content -->
 <swiper class="content" style="height:{{contentHeight}}px" bindchange="handleSwiperChange">  
-  <swiper-item>1</swiper-item>
-  <swiper-item>2</swiper-item>
+  <swiper-item class="music">
+    <view class="album">
+      <image class="image" mode="widthFix" src="{{currentSong.al.picUrl}}"></image>
+    </view>
+    <view class="info">
+      <view class="title">{{currentSong.name}}</view>
+      <view class="subtitle">
+        <view class="singer">{{currentSong.ar[0].name}}</view>
+        <view class="alias">专辑：{{currentSong.al.name}}</view>
+      </view>
+    </view>
+    <view class="lyric">我是歌词，纯纯粹粹</view>
+    <view class="progress">
+      <slider block-size="12"></slider>
+      <view class="time">
+        <view class="current"></view>
+        <view class="duration"></view>
+      </view>
+    </view>
+    <view class="operation">
+      <image class="btn btn-mode" src="/assets/images/player/play_order.png"></image>
+      <image class="btn btn-prev" src="/assets/images/player/play_prev.png"></image>
+      <image class="btn btn-pause" src="/assets/images/player/play_pause.png"></image>
+      <image class="btn btn-next" src="/assets/images/player/play_next.png"></image>
+      <image class="btn btn-music" src="/assets/images/player/play_music.png"></image>
+    </view>
+  </swiper-item>
+  <swiper-item class="lyric"></swiper-item>
 </swiper>
