--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -25,7 +25,8 @@
         <view class="alias">专辑：{{currentSong.al.name}}</view>
       </view>
     </view>
-    <view class="lyric">我是歌词，纯纯粹粹</view>
+    <!-- 小屏幕适配 -->
+    <view class="lyric" wx:if="{{isMusicLyric}}">我是歌词，纯纯粹粹</view>
     <view class="progress">
       <slider block-size="12"></slider>
       <view class="time">
