feat: find the corresponded time and lyric for the music current play time

--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -27,7 +27,7 @@
       </view>
     </view>
     <!-- 小屏幕适配 -->
-    <view class="lyric" wx:if="{{isMusicLyric}}">我是歌词，纯纯粹粹</view>
+    <view class="lyric" wx:if="{{isMusicLyric}}">{{currentLyricText}}</view>
     <view class="progress">
       <slider 
         class="slider" 
