--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -49,5 +49,20 @@
       <image class="btn btn-music" src="/assets/images/player/play_music.png"></image>
     </view>
   </swiper-item>
-  <swiper-item class="lyric"></swiper-item>
+  <swiper-item class="lyric">
+  <!-- scrollview的动态滚动 以及 smooth动画 -->
+    <scroll-view class="lyric-list" 
+                 scroll-y
+                 scroll-top="{{lyricScrollTop}}"
+                 scroll-with-animation
+                 >
+      <block wx:for="{{currentLyricInfos}}" wx:key="index">
+      <!-- 动态绑定 -->
+        <view 
+        class="item  {{currentLyricIndex === index ? 'active':''}}" 
+        style="padding-top: {{index === 0? (contentHeight/3):0}}px; padding-bottom: {{index === currentLyricInfos.length-1?(contentHeight/3):0}}px;">
+               {{item.text}}</view>
+      </block>
+    </scroll-view>
+  </swiper-item>
 </swiper>
