--- a/baseui/nav-bar/index.wxml
+++ b/baseui/nav-bar/index.wxml
@@ -4,7 +4,7 @@
   <view style="height:{{statusHeight}}px"></view>
   <!-- 导航拦  -->
   <view class="nav-bar">
-    <view class="left">
+    <view class="left" bindtap="handleLeftClick">
     <!-- * slot顺序重要 -->
       <view class="left-slot"><slot name="left"></slot></view>
       <view class="left-arrow">
