--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -5,7 +5,7 @@
 <view class="bg-cover"></view>
 
 <!-- custom nav bar -->
-<nav-bar>
+<nav-bar bind:click="handleClick">
   <view class="tab" slot="title">
     <view class="{{!currentPage? 'active':''}}">歌曲</view>
     <view class="divider">|</view>
