--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -42,7 +42,11 @@
       </view>
     </view>
     <view class="operation">
-      <image class="btn btn-mode" src="/assets/images/player/play_order.png"></image>
+      <image class="btn btn-mode" 
+             src="/assets/images/player/play_{{playModeName}}.png" 
+             bindtap="handleModeBtnClick"
+             >
+      </image>
       <image class="btn btn-prev" src="/assets/images/player/play_prev.png"></image>
       <image class="btn btn-pause" src="/assets/images/player/play_pause.png" bindtap="handlePause"></image>
       <image class="btn btn-next" src="/assets/images/player/play_next.png"></image>
