--- a/pages/detail-search/index.wxml
+++ b/pages/detail-search/index.wxml
@@ -43,7 +43,7 @@
   <view class="title">最佳匹配</view>
   <view class="list">
     <block wx:for="{{resultSongs}}" wx:key="index">
-      <song-item-v2 item="{{format.formatObject(item)}}" index="{{index+1}}"></song-item-v2>
+      <song-item-v2 item="{{item}}" index="{{index+1}}"></song-item-v2>
     </block>
   </view>
 </view>
