--- a/pages/home-music/index.wxml
+++ b/pages/home-music/index.wxml
@@ -33,7 +33,7 @@
   <area-header title="歌曲推荐" bind:click="handleMoreClick"></area-header>
   <view class="song-list">
     <block wx:for="{{recommendSongs}}" wx:key="index">
-    <song-item-v1 item="{{item}}"></song-item-v1>
+    <song-item-v1 item="{{item}}" bindtap="handleSongItemClick" data-index="{{index}}"></song-item-v1>
     </block>
   </view>
 </view>
