feat: prev and next for the songlist, be care with the details, use switch, consider the edges

--- a/pages/music-player/index.wxml
+++ b/pages/music-player/index.wxml
@@ -47,10 +47,19 @@
              bindtap="handleModeBtnClick"
              >
       </image>
-      <image class="btn btn-prev" src="/assets/images/player/play_prev.png"></image>
+      <image class="btn btn-prev" 
+             src="/assets/images/player/play_prev.png"
+             bindtap="handlePrev"
+             >
+      </image>
       <image class="btn btn-pause" src="/assets/images/player/play_{{playingName}}.png" bindtap="handlePause"></image>
-      <image class="btn btn-next" src="/assets/images/player/play_next.png"></image>
-      <image class="btn btn-music" src="/assets/images/player/play_music.png"></image>
+      <image class="btn btn-next" 
+             src="/assets/images/player/play_next.png"
+             bindtap="handleNext">
+      </image>
+      <image class="btn btn-music" 
+              src="/assets/images/player/play_music.png">
+      </image>
     </view>
   </swiper-item>
   <swiper-item class="lyric">
