--- a/pages/home-music/index.wxss
+++ b/pages/home-music/index.wxss
@@ -7,7 +7,7 @@
 }
 
 page {
-  padding: 0 20rpx;
+  padding: 0 20rpx 50px;
 }
 .swiper {
   border-radius: 12rpx;
@@ -23,4 +23,61 @@ page {
 
 .swiper-item image {
   width: 100%;
+}
+
+
+.play-bar {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  left:0;
+  right:0;
+  bottom: 0;
+  padding:0 8px;
+  height: 44px;
+
+  box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
+  background-color: white;
+}
+
+.play-bar .left, .right {
+    display: flex;
+    align-items: center;
+}
+
+.play-bar .album {
+  position: relative;
+  top: -8px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.play-bar .left .name {
+  font-size: 14px;
+  margin-left: 10rpx;
+}
+
+.play-bar .right .icon {
+  width: 30px;
+  height: 30px;
+}
+
+.play-bar .right .play {
+  width: 25px;
+  height: 25px;
+  margin-right: 10rpx;
+}
+
+.album-animation {
+  animation: rotate 16s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg)
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
